typescript/checker/tests/conformance/parser/ecmascript5/Statements/ContinueStatements/parser_continueTarget1.ts.stderr
error: TS1115
 --> $DIR/tests/conformance/parser/ecmascript5/Statements/ContinueStatements/parser_continueTarget1.ts:2:3
  |
2 |   continue target;
  |   ^^^^^^^^^^^^^^^^

